--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "passport": "^0.6.0",
+    "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
