--- a/frontvue/vuefront/package.json
+++ b/frontvue/vuefront/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
